--- a/flexer/Style.css
+++ b/flexer/Style.css
@@ -8,26 +8,35 @@ h1{
 
 #main{
     height: 300px;
-    width: 500px;
+    width: 700px;
     border: 2px solid black;
  
    display: flex;
-   flex-direction:row-reverse;
+   flex-direction:row;
+   justify-content:center;
+   /* flex-wrap: wrap; */
+   
+   align-items: flex-start;
+   /* align-content: center; */
 }
 body{
     text-align: center;
 }
 div{
     height: 100px;
-    width: 500px;
+    width: 50px;
     display: inline-block;
     border: 1px solid black;
 }
 #sub1{
     background-color: aqua;
+    flex-grow: 1;
 }
 #sub2{
     background-color: pink;
+    height: 200px;
+ flex-grow: 2;
+
 }
 #sub3{
     background-color:beige;
@@ -38,4 +47,5 @@ div{
 }
 #sub5{
     background-color:blueviolet;
+    
 }
