--- a/CompletePage/style.css
+++ b/CompletePage/style.css
@@ -10,35 +10,89 @@
  #mainbod{
     height: 100%;
     width: 100%;
-    background-color: rgb(155, 155, 155);
+    background-color: rgb(218, 218, 218);
     display: grid;
     grid-template-columns: 25% 25% 50%;
-    grid-template-rows: 30% 50% 20% ;
+    grid-template-rows: 28% 55% 17% ;
  }
- .elem{
-     background-color: blueviolet;
-     border: 1px solid black;
-    }
+
 #elemn1{
-    justify-items: center;
-    align-items: center;
+    padding: 2vh;
+   }
+   #elemn2{
+      padding: 4%;
+      justify-self: end;  
+      text-align: right;
 }
-    
+#elemn2 h4{
+   padding-bottom: 4vh;
+   font-size: 3.2vh;
+   font-weight: 500;
+}
+#elemn2 h5{
+   font-size: 2vh;
+   font-weight: 500;
+   color: #333;
+}
 #elemn3{
-       background-color: brown;
+       /* background-color: brown; */
        grid-column-start: 3;
        grid-column-end: 4;
        grid-row-start: 1;
        grid-row-end: 4;
+       
     }
-
+#elemn3 video{
+   padding: 1vw;
+  height: 100%;
+  width: 100%;
+  padding-left: 2vw;
+  padding-right: 5vw;
+  object-fit: cover;
+}
+#gola{
+   background-color: red;
+   position: absolute;
+   height: 10vh;
+   width: 10vh;
+   /* justify-self: center; */
+   align-self: center;
+   left: 49vw;
+   border-radius: 50%;
+}
+#gola h2{
+   align-self: center;
+}
  #elemn4{
-    background-color: azure;
+    /* background-color: azure; */
+    grid-column-start: 1;
+    grid-column-end: 3;
+    /* font-weight: 200; */
+    /* padding-top: 2vw; */
+   }
+   #elemn4 h1{
+      padding-left: 8vw;
+      /* padding-top: vw; */
+    font-size: 12vh;
+   font-weight: 100;
+   font-family: Arial, Helvetica, sans-serif;
+   line-height: 6vw;
+ }
+ #elemn4 h1:nth-child(2n){
+   /* background-color: pink; */
+   margin-left: 9vw;
+   /* text-align: center; */
+ }
+ #elemn4 h1:nth-child(4){
+   margin-left: 12vw;
+ }
+ #elemn5{
+    /* background-color: aqua; */
     grid-column-start: 1;
     grid-column-end: 3;
  }
- #elemn5{
-    background-color: aqua;
-    grid-column-start: 1;
-    grid-column-end: 3;
+ #elemn5 p{
+   padding: 2vh;
+   padding-top: 4vh;
+   font-weight: 500;
  }
