--- a/CompletePage/style.css
+++ b/CompletePage/style.css
@@ -6,30 +6,36 @@
  html,body{
  height: 100%;
  width: 100%;
+ background-color: rgb(218, 218, 218);
  }
  #mainbod{
     height: 100%;
     width: 100%;
-    background-color: rgb(218, 218, 218);
     display: grid;
-    grid-template-columns: 25% 25% 50%;
+    grid-template-columns: 25% 25% 45% 5%;
     grid-template-rows: 28% 55% 17% ;
+    position: relative;
  }
-
-#elemn1{
+ .elem{
+ /* border: 1px solid black; */
+ }
+ #elemn1{
     padding: 2vh;
    }
    #elemn2{
       padding: 4%;
-      justify-self: end;  
-      text-align: right;
+      
 }
 #elemn2 h4{
+   justify-self: end;  
+      text-align: right;
    padding-bottom: 4vh;
    font-size: 3.2vh;
    font-weight: 500;
 }
 #elemn2 h5{
+   justify-self: end;  
+      text-align: right;
    font-size: 2vh;
    font-weight: 500;
    color: #333;
@@ -43,32 +49,49 @@
        
     }
 #elemn3 video{
+   border-radius: 20%;
    padding: 1vw;
   height: 100%;
-  width: 100%;
+  width: 45vw;
   padding-left: 2vw;
-  padding-right: 5vw;
+  /* padding-right: 5vw; */
   object-fit: cover;
+}
+#koala{
+   padding-top: 1vh;
+   writing-mode: vertical-rl; 
+    transform: rotate(0deg); 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: space-evenly; 
+    height: 100%; 
+    grid-column: 4; 
+    grid-row: 1 / span 3; 
 }
 #gola{
    background-color: red;
    position: absolute;
    height: 10vh;
    width: 10vh;
-   /* justify-self: center; */
-   align-self: center;
    left: 49vw;
+   top: 20vw;
+   /* justify-self: center; */
+   /* align-items: center; */
+   align-content: center;
+   justify-content: center;
    border-radius: 50%;
+   display: flex;
 }
-#gola h2{
+.ri-arrow-right-line{
+   justify-self: center;
    align-self: center;
+  font-size: 3vw;
+  color: rgb(209, 179, 160);
 }
  #elemn4{
-    /* background-color: azure; */
     grid-column-start: 1;
     grid-column-end: 3;
-    /* font-weight: 200; */
-    /* padding-top: 2vw; */
+    
    }
    #elemn4 h1{
       padding-left: 8vw;
@@ -95,4 +118,102 @@
    padding: 2vh;
    padding-top: 4vh;
    font-weight: 500;
+ }
+
+ @media (max-width:600px) {
+   #mainbod{
+      height: 100%;
+    width: 100%;
+    background-color: rgb(218, 218, 218);
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 15% 20% 10% 50% ;
+   }
+
+   #elemn3{
+      /* background-color: brown; */
+      display: flex;
+      grid-column: 1 / 3;
+      grid-row: 4;
+      justify-content: center;
+      align-items: center;
+   }
+   #elemn3 video{
+      justify-items: center;
+      border-radius: 20%;
+      padding: 1vw;
+     height: 100%;
+     width: 50%;
+     object-fit: cover;
+   }
+
+   #elemn2{
+      /* padding: %; */
+      
+      
+}
+#elemn2 h4{
+   justify-self: end;  
+      text-align: right;
+   padding-bottom: 1vw;
+   font-size: 3vh;
+   font-weight: 500;
+}
+#elemn2 h5{
+   justify-self: end;  
+      text-align: right;
+   font-size: 2.3vw;
+   font-weight: 500;
+   color: #333;
+}
+
+  #elemn4 h1{
+     padding-left: 7vw;
+     /* padding-top: vw; */
+   font-size: 6.7vh;
+  font-weight: 900;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 6vw;
+}
+#elemn4 h1:nth-child(2n){
+  /* background-color: pink; */
+  margin-left: 24vw;
+  /* text-align: center; */
+}
+#elemn4 h1:nth-child(4){
+  margin-left: 29vw;
+}
+#elemn5 p{
+   padding: 0.8vh;
+   /* padding-top: 4vh; */
+   font-weight: 500;
+ }
+ #koala{
+  grid-row: 5 / 6;
+  grid-column: 1 / 4;
+  transform: rotate(0deg);
+  display: flex; 
+    /* flex-direction: column;  */
+    justify-content: space-around; 
+    height: 100%;
+    writing-mode: horizontal-tb; 
+}
+#gola{
+   background-color: red;
+   position: absolute;
+   height: 7vh;
+   width: 7vh;
+   left: 43vw;
+   top: 57vw;
+  
+   align-content: center;
+   justify-content: center;
+   border-radius: 50%;
+   display: flex;
+}
+.ri-arrow-right-line{
+   justify-self: center;
+   align-self: center;
+  font-size: 3vw;
+}
  }
